# ChamferSubQuad

./: README.md
latex/dgci2014/: article.tex  dtbib.bib  library.bib  macros.tex  mybiblio.bib  rebuttal.txt
latex/dgci2014/data/: result-raster.txt  statVoronoi-mono-short.txt  statVoronoi-openmp.txt  trace.py
latex/dgci2014/data/TMP/: result-raster-short.txt  scaleup.txt  statVoronoi-mono.txt  statVoronoi-openmp-short.txt  trace.gp  trace.py  trace.py~
latex/dgci2014/slides/: index.html
latex/dgci2014/slides/css/: reveal.css  reveal.min.css
latex/dgci2014/slides/css/theme/: solarized.css
latex/dgci2014/slides/plugin/math/: math.js
src/: CMakeLists.txt  statDistances.cpp  statVoronoi-raster.cpp  statVoronoi.cpp  statVoronoiMP.cpp  statVoronoil2.cpp  testLogChamfer.cpp
